crates/stano-di-macros/tests/ui/service_on_tuple_struct.stderr
error: #[service] only supports structs with named fields or unit structs
 --> tests/ui/service_on_tuple_struct.rs:4:1
  |
4 | struct Widget(i32);
  | ^^^^^^^^^^^^^^^^^^^
