crates/stano-di-macros/tests/ui/service_on_tuple_struct.rs
use stano_di_macros::service;

#[service]
struct Widget(i32);

fn main() {}
